# hopsworks-api

./: .coveragerc  .gitignore  .markdownlint.yaml  4.2  4.4  4.5  AGENTS.md  CLAUDE.md  CLI_IMPLEMENTATION_PLAN.md  CLI_PHASE4_SUMMARY.md  CONTRIBUTING.md  Jenkinsfile  PLAN.md  README.md  TESTS_FIXED_SUMMARY.md  auto_doc.py  ci.Jenkinsfile  data.json  latest  mkdocs.yml  requirements-docs.txt  versions.json  workflow_inputs.sh
python/: .pre-commit-config.yaml  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  README.md  aliases.py  auto_doc.py  pyproject.toml  setup.py  test.py
python/hopsworks/: __init__.py  command.py  connection.py  constants.py  decorators.py  environment.py  execution.py  flink_cluster.py  flink_execution.py  git_commit.py  git_file_status.py  git_op_execution.py  git_provider.py  git_remote.py  git_repo.py  job.py  job_schedule.py  kafka_schema.py  kafka_topic.py  library.py  project.py  secret.py  spark.py  user.py  util.py  version.py
python/hopsworks/cli/: __init__.py  __main__.py  auth.py  config.py  joinspec.py  lineage.py  main.py  output.py  session.py
python/hopsworks/client/: __init__.py  auth.py  base.py  exceptions.py  external.py  hopsworks.py  online_store_rest_client.py
python/hopsworks/command/: __init__.py
python/hopsworks/connection/: __init__.py
python/hopsworks/constants/: __init__.py
python/hopsworks/core/: __init__.py  alerts_api.py  dataset_api.py  environment_api.py  execution_api.py  flink_cluster_api.py  git_api.py  git_op_execution_api.py  git_provider_api.py  git_remote_api.py  git_repo_api.py  job_api.py  kafka_api.py  library_api.py  opensearch_api.py  project_api.py  secret_api.py  user_api.py  variable_api.py
python/hopsworks/decorators/: __init__.py
python/hopsworks/engine/: environment_engine.py  execution_engine.py  git_engine.py
python/hopsworks/environment/: __init__.py
python/hopsworks/execution/: __init__.py
python/hopsworks/flink_cluster/: __init__.py
python/hopsworks/git_commit/: __init__.py
python/hopsworks/git_file_status/: __init__.py
python/hopsworks/git_op_execution/: __init__.py
python/hopsworks/git_provider/: __init__.py
python/hopsworks/git_remote/: __init__.py
python/hopsworks/git_repo/: __init__.py
python/hopsworks/internal/: aliases.py  exceptions.py
python/hopsworks/job/: __init__.py
python/hopsworks/job_schedule/: __init__.py
python/hopsworks/kafka_schema/: __init__.py
python/hopsworks/kafka_topic/: __init__.py
python/hopsworks/mcp/: README.md  __init__.py  main.py  run_server.py  server.py
python/hopsworks/project/: __init__.py
python/hopsworks/secret/: __init__.py
python/hopsworks/user/: __init__.py
python/hopsworks/util/: __init__.py
python/hopsworks_cli/: README.md  __init__.py  auth.py  config.py  main.py  output.py
python/hopsworks_cli/commands/: __init__.py  deployments.py  feature_groups.py  jobs.py  models.py  projects.py  secrets.py
python/hopsworks_cli/utils/: __init__.py  exceptions.py
python/hopsworks_common/: alert.py  alert_receiver.py  alert_route.py  app.py  code.py  color.py  command.py  connection.py  constants.py  decorators.py  env_var.py  environment.py  execution.py  feature_store_activity.py  flink_cluster.py  git_commit.py  git_file_status.py  git_op_execution.py  git_provider.py  git_remote.py  git_repo.py  job.py  job_schedule.py  kafka_schema.py  kafka_topic.py  library.py  math_utils.py  pagination.py  project.py  rate_limiter.py  retry.py  search_results.py  secret.py  spark_connect_utils.py  tag.py  text_utils.py  triggered_alert.py  usage.py  user.py  util.py  (+1 more)
python/hopsworks_common/client/: __init__.py  auth.py  base.py  exceptions.py  external.py  hopsworks.py  online_store_rest_client.py
python/hopsworks_mcp/: README.md  main.py  server.py  version.py
python/hsfs/: BUILTIN_TRANSFORMATIONS.md  __init__.py  builtin_transformations.py  code.py  connection.py  embedding.py  expectation_suite.py  feature.py  feature_group.py  feature_group_commit.py  feature_group_writer.py  feature_logger.py  feature_logger_async.py  feature_store.py  feature_store_activity.py  feature_view.py  ge_expectation.py  ge_validation_result.py  hopsworks_udf.py  online_config.py  serving_key.py  split_statistics.py  statistics.py  statistics_config.py  storage_connector.py  tag.py  training_dataset.py  training_dataset_feature.py  training_dataset_split.py  transformation_function.py  transformation_statistics.py  usage.py  user.py  util.py  validation_report.py  version.py
python/hsfs/client/: __init__.py  (+3 more)
python/hsml/: __init__.py  connection.py  constants.py  decorators.py  deployable_component.py  deployable_component_logs.py  deployment.py  deployment_tracing_config.py  inference_batcher.py  inference_endpoint.py  inference_logger.py  kafka_topic.py  model.py  model_registry.py  model_schema.py  model_serving.py  predictor.py  predictor_state.py  predictor_state_condition.py  resources.py  scaling_config.py  schema.py  tag.py  transformer.py  util.py  version.py
python/scripts/: check_importable.py  check_pep8_public.py
python/tests/: conftest.py  test_alert_status_compat.py  test_builtin_imputation.py  test_builtin_log_transform.py  test_builtin_quantile_rank.py  test_builtin_target_mean_encoder.py  test_builtin_winsorize.py  test_color.py  test_connection.py  test_constants.py  test_dashboard.py  test_decorators.py  test_deployable_component.py  test_deployable_component_logs.py  test_deployment.py  test_deployment_tracing_config.py  test_endpoint.py  test_environment.py  test_expectation_suite.py  test_explicit_provenance.py  test_feature.py  test_feature_group.py  test_feature_group_commit.py  test_feature_group_writer.py  test_feature_store.py  test_feature_view.py  test_feature_view_partitioned_by.py  test_ge_expectation.py  test_ge_validation_result.py  test_hf_download.py  test_hopswork_udf.py  test_hopsworks_lazy_alias.py  test_hsfs_util.py  test_inference_batcher.py  test_inference_endpoint.py  test_inference_logger.py  test_kafka_topic.py  test_local_paths.py  test_math_utils.py  test_model.py  (+34 more)
(+23357 files in other folders)
